<resources>
    <!-- Generales -->
    <string name="app_name">MatchApp</string>
    <string name="fb_app_id">1714845198733398</string>

    <!-- check for Google Play Service -->
    <string name="check_google_play_service_error">El dispositivo no es soportado. Google Play Services no está instalado!</string>

    <!--GSMIntentService-->
    <string name="gsmintentservice_error_server_app_send_registrationgsm">No es posible enviar el id de registro gcm a nuestro servidor.</string>

    <!-- LoginActivity-->
    <string name="buttontxt_entrar">Iniciar sesión</string>
    <string name="buttontxt_crear_cuenta">Crear cuenta</string>

    <string name="buttontxt_registrar">Crear una cuenta</string>
    <string name="buttontxt_forgot_password">Olvidaste tu contrase\u0148a?</string>

    <string name="txt_sign_in_using">Iniciar sesión usando</string>

    <string name="buttontxt_fb_login">INICIAR SESIÓN CON FACEBOOK</string>
    <string name="buttontxt_login">Ya tenés cuenta? Iniciar sesión</string>
    <string name="dialog_forgot_password">Recuperación de contrase\u0148a</string>
    <string name="dialog_forgot_password_hint">Ingrese E-mail de cuenta</string>
    <string name="dialog_forgot_password_ok">Continuar</string>
    <string name="dialog_forgot_password_cancel">Cancelar</string>
    <string name="running_auth">Autenticando...</string>
    <string name="dialog_close_button">OK</string>

    <string name="error_invalid_credentials">Los datos ingresados no son válidos</string>

    <!-- Validaciones de LoginActivity -->
    <string name="invalid_username_empty">Ingrese su email</string>
    <string name="invalid_mail_invalid">Ingrese un email válido</string>
    <string name="invalid_name_empty">Ingrese su nombre</string>
    <string name="invalid_alias_empty">Ingrese su nombre</string>
    <string name="invalid_password_empty">Ingrese su contrse\u0148a</string>
    <string name="invalid_password_format">Entre 4 y 10 caracteres alfanuméricos</string>
    <string name="invalid_auth">No se pudo iniciar sesión, verifique los datos intresados</string>
    <string name="invalid_birthdate">Ingrese su fecha de nacimiento</string>
    <string name="invalid_gender">Ingrese su sexo</string>
    <string name="hint_inputname">Nombre completo</string>

    <string name="hint_password">Contrase\u0148a</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_fecha_nac">Fecha de nacimiento</string>
    <string name="alert_dialog_continue_editing">Desea descartar cambios?</string>
    <string name="alert_dialog_continue_editing_discard">Descartar</string>
    <string name="alert_dialog_continue_editing_cancel">Cancelar</string>
    <!-- SignUpActivity -->
    <string name="creating_account">Creando cuenta...</string>
    <string name="searching_for_interests">Buscando intereses válidos...</string>
    <string name="refresh_account_details">Actualizando datos de perfil...</string>
    <string name="signup_failed">No se pudo completar el registro</string>

    <string name="hint_campo_texto_nombre">Primer nombre</string>
    <string name="hint_campo_texto_apellido">Primer apellido</string>
    <string name="hint_campo_texto_telefono">Teléfono</string>
    <string name="hint_campo_texto_correo">Correo</string>
    <string name="username_used">Email ya utilizado en otra cuenta</string>

    <!-- Textos de menu items -->
    <string name="icon_game">Buscar candidatos</string>
    <string name="icon_matchs">Mis matchs encontrados</string>
    <string name="icon_chat">Mis chats abiertos</string>
    <string name="action_profile">Editar perfil</string>
    <string name="action_logout">Cerrar sesión</string>

    <!-- Lista Conversaciones abiertas -->
    <string name="label_yesterday">Ayer</string>

    <!-- Activity ChatRoom -->
    <string name="send">Enviar</string>
    <string name="enter_message">Escribir mensaje...</string>

    <!-- Activity profile -->
    <string name="probile_name">Nombre</string>
    <string name="profile_age">Edad</string>
    <string name="profile_location">Ubicación</string>
    <string name="profile_common_interests">Intereses en común</string>
    <string name="profile_more_interests">También le gusta</string>

    <!--Activity editable profile -->
    <string name="edit_profile_birthdate">Fecha de nacimiento</string>
    <string name="edit_profile_alias">Apodo</string>
    <string name="edit_profile_age">Edad</string>
    <string name="edit_profile_interests">Mis intereses</string>
    <string name="edit_profile_common_interests">Intereses en común</string>
    <string name="edit_profile_dialog_change_password_title">Cambio de contrase\u0148a</string>
    <string name="edit_profile_dialog_change_password_hint">Nueva contrase\u0148a</string>
    <string name="edit_profile_dialog_change_password_ok">Confirmar</string>
    <string name="edit_profile_dialog_change_password_cancel">Cancelar</string>
    <string name="edit_profile_mail">Email de la cuenta</string>
    <string name="edit_profile_change_password">Cambiar contrase\u0148a</string>
    <string name="edit_profile_delete_account">Borrar cuenta</string>
    <string name="edit_profile_uploading_data_to_server">Actualizando Datos</string>
    <string name="edit_profile_take_picture">Tomar foto</string>
    <string name="edit_profile_choose_picture">Elegir de galería</string>
    <string name="edit_profile_cancel">Cancelar</string>
    <string name="edit_profile_action_select_picture">Seleccionar foto</string>
    <string name="edit_profile_alert_dialog_connection_failed">Desea descartar los cambios?</string>

    <string name="edit_profile_title_select_picture">Cambiar foto de perfil</string>
    <string name="error_location_refresh_failed">No se puede acceder a su ubicación actual, verifique tener habilitada la ubicación de su dispositivo</string>
    <!-- IntroActivity -->
    <string name="intro_location_title">Tenemos en cuenta tu ubicación</string>
    <string name="intro_location_description">Queremos darte los mejores candidatos, y lo mejor no puede estar muy lejos tuyo!</string>
    <string name="intro_interests_subtitle">Seleccioná al menos uno que te interese para ayudarnos a encontrar los mejores candidatos</string>
    <string name="intro_error_empty_interest">Debe seleccionar al menos una opción</string>
    <string name="intro_error_empty_photo">Debe elegir una foto de perfil</string>
    <string name="edit_profile_toolbar_label">Editar perfil</string>
    <string name="edit_interesets_profile_toolbar_label">Editar mis intereses</string>

    <string name="upload_photo_default_error">No se pudo complear la operación, intente nuevamente</string>


    <!-- UploadImageFragment -->
    <string name="sending_image_server">Guardando imagen...</string>
    <string name="connection_problem">Problemas de conexión, por favor verifique tener acceso a internet</string>
    <string name="connection_problem_candidates">Reintentar</string>
    <string name="connection_problem_candidates_later">Cancelar</string>
    <string name="connection_problem_ok">Ok</string>
    <string name="age_menor">Debes ser mayor de 16 años</string>
    <!--NewMatchActivity-->
    <string name="activity_new_match_title">¡Nuevo match!</string>
    <string name="activity_new_match_subtitle">también quiere chatear contigo</string>
    <string name="activity_new_match_btn_chat">Iniciar chat</string>
    <string name="activity_new_match_title_later">Más adelante</string>

    <string name="internet_problem">Hay problemas de conexión</string>

    <string name="swipe_like">Sí</string>
    <string name="swipe_dislike">No</string>

    <string name="signing_out">Cerrando sesión...</string>

    <string name="swipe_no_more">Alcanzaste el límite de candidatos por día, vuelve a intentar más tarde</string>
    <string name="swipe_no_more_ok">Ok</string>
    <string name="retry">Buscar candidatos</string>
    <string name="fetching_chat_history">Cargando conversación</string>
    <string name="fetching_all_chats">Cargando</string>
    <string name="retry_fetching_chat_history">Volver a cargar conversación</string>
    <string name="retry_fetching_all_chatrooms">Volver a cargar conversaciones</string>
    <string name="no_chat_room_open">Todavía no tienes chats abiertos</string>
    <string name="no_more_candidates">Por el momento no hay candidatos,</string>
    <string name="came_back_later">vuele más tarde</string>
    <string name="no_messages_yet">No seas tímido y comienza la conversación</string>
    <string name="no_messages_yet_woman">No seas tímida y comienza la conversación</string>
    <string name="load_more">CARGAR MENSAJES ANTERIORES</string>
    <string name="first_time">¡Felicitaciones! Ya estás listo para utilizar MatchApp</string>
    <string name="first_time_ok">Cerrar</string>
    <string name="hint_baseurl">Ingrese la dirección del servidor</string>
    <string name="btn_commit_base_url_changes">Cambiar dirección del appServer</string>
</resources>
