<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.MainActivity">
    <item
        android:id="@+id/icon_game"
        android:icon="@drawable/ic_content_copy_24dp"
        android:title="@string/icon_game"
        app:showAsAction="always" />

    <!-- <item
         android:id="@+id/icon_matchs"
         android:icon="@drawable/ic_action_icon_sidebar_contacts"
         android:title="@string/icon_matchs"
         app:showAsAction="always" />-->


    <item
        android:id="@+id/icon_chats"
        android:icon="@drawable/ic_forum_24dp"
        android:title="@string/icon_chat"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="Cerrar sesión"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
</menu>
