<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black_smooth"
    android:background="@drawable/squares_reapeating"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_corner_background_white"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <!--  Ingreso de nombre de usuario -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/input_baseUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_baseurl"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_cast_black_24dp"
                android:drawablePadding="@dimen/edittext_drawable_pad"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_commit_base_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/deckButtonsColor"
            android:textColor="@color/white"
            android:text="@string/btn_commit_base_url_changes"
            />
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@color/white"

            android:orientation="vertical">
        <!-- Boton de LoginFacebook-->
        <Button
            android:id="@+id/btn_fb_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/buttontxt_fb_login"
            android:backgroundTint="@color/fb"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:textColor="@color/white"
            android:text="@string/buttontxt_entrar"
            />

        <!-- Boton de Login-->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_dark"
            android:textColor="@color/white"
            android:text="@string/buttontxt_registrar"
            />


        </LinearLayout>

</RelativeLayout>