<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:backgroundTint="@color/black_smooth"
    android:background="@drawable/squares_reapeating"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:id="@+id/linearLayoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo"/>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_corner_background_white">
        <!-- Ingreso de nombre -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/edittext_drawable_pad"
                android:hint="@string/hint_inputname"
                android:inputType="textCapWords"
                android:drawableLeft="@drawable/ic_person_24dp_white"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Ingreso de email -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

         >

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress|textAutoComplete"
                android:drawablePadding="@dimen/edittext_drawable_pad"
                android:drawableLeft="@drawable/ic_email_24dp_white"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Ingreso de fecha nacimiento -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:onClick="showDatePickerDialog">

            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_fecha_nac"
                android:inputType="textEmailAddress"
                android:onClick="showDatePickerDialog"
                android:drawablePadding="@dimen/edittext_drawable_pad"
                android:drawableLeft="@drawable/ic_event_black_24dp"

                />

        </android.support.design.widget.TextInputLayout>

        <!-- Ingreso de Sexo de la persona -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fiuba.matchapp.view.clickToSelectEditText.ClickToSelectEditText
                android:id="@+id/sex_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Sexo"
                android:drawablePadding="@dimen/edittext_drawable_pad"
                android:drawableLeft="@drawable/ic_wc_black_24dp"
                />

        </android.support.design.widget.TextInputLayout>

        <!-- Ingreso de contrasena -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:drawablePadding="@dimen/edittext_drawable_pad"
                android:drawableLeft="@drawable/ic_https_24dp_whitw"/>
        </android.support.design.widget.TextInputLayout>
</LinearLayout>
        <!-- Boton de registro -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/accent"
            android:text="@string/buttontxt_crear_cuenta"/>

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/buttontxt_login"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>