<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controller.activity.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/icName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_person_24dp" />

            <TextView
                android:id="@+id/txtNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/icName"
                android:layout_toRightOf="@id/icName"
                android:text="@string/probile_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/profile_text_title" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameLabel"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/icName"
                android:layout_toRightOf="@id/icName"
                android:text="Kevin Otero"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/profile_text_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/icEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_content_paste_24dp"/>

            <TextView
                android:id="@+id/txtAgeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/icEdad"
                android:layout_toRightOf="@id/icEdad"
                android:text="@string/profile_age"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/profile_text_title" />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAgeLabel"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/icEdad"
                android:layout_toRightOf="@id/icEdad"
                android:text="34"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/profile_text_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/icLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_room_24dp"/>

            <TextView
                android:id="@+id/txtLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/icLocation"
                android:layout_toRightOf="@id/icLocation"
                android:text="@string/profile_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/profile_text_title" />

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLocationLabel"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/icLocation"
                android:layout_toRightOf="@id/icLocation"
                android:text="Buenos aires (6.0km) "
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/profile_text_content" />

        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/icCommonInterests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_keyboard_alt_24dp"/>

            <TextView
                android:id="@+id/tvNumber3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@id/icCommonInterests"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/edit_profile_common_interests"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/profile_text_title" />

            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/tag_group"
                android:layout_below="@id/tvNumber3"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/icCommonInterests"
                android:layout_toRightOf="@id/icCommonInterests"
                style="@style/TagGroup"
                app:atg_textSize="@dimen/tag_text_size"
                app:atg_backgroundColor="@color/primary_dark"
                app:atg_borderColor="@color/primary_dark"
                app:atg_pressedBackgroundColor="@color/primary_dark"
                app:atg_textColor="@color/white"
                app:atg_verticalSpacing="@dimen/tag_vertical_spacing"
                app:atg_verticalPadding="@dimen/tag_vertical_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">


            <ImageView
                android:id="@+id/icMoreInterests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_whatshot_24dp"/>
            <TextView
                android:id="@+id/labelMoreInterests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@id/icMoreInterests"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/profile_more_interests"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/profile_text_title" />

            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/tag_group_more"
                android:layout_below="@id/labelMoreInterests"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/icMoreInterests"
                android:layout_toRightOf="@id/icMoreInterests"
                style="@style/TagGroup"
                app:atg_textSize="@dimen/tag_text_size"
                app:atg_backgroundColor="@color/beige"
                app:atg_borderColor="@color/beige"
                app:atg_pressedBackgroundColor="@color/primary_dark"
                app:atg_textColor="@color/white"
                app:atg_verticalSpacing="@dimen/tag_vertical_spacing"
                app:atg_verticalPadding="@dimen/tag_vertical_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
